fix footer spacing

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -94,10 +94,6 @@ a:hover .readmore {
   margin-bottom: 10rem;
 }
 
-.footer-email {
-  margin-bottom: 3rem;
-}
-
 .footer-about {
   font-size: 1.6rem;
   color: #868686;
